--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,134 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
+:root {
+  --fw-thin: 100;
+  --fw-light: 300;
+  --fw-regular: 400;
+  --fw-medium: 500;
+  --fw-bold: 700;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  /* 10px = 1rem */
+  font-size: 62.5%;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+.container {
+  max-width: 80vw;
+  margin: 0 auto;
+}
+
+.loading {
   text-align: center;
+  font-size: 3rem;
+  margin: 2rem 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* SEARCHBAR */
+.nav {
+  width: 100%;
+  padding: 2rem;
+  background-color: #000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav form {
+  display: flex;
+  justify-content: center;
+  position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-input {
+  font-size: 1.8rem;
+  border: none;
+  border-radius: 1.5rem;
+  padding: 1rem 3rem;
+  width: 100%;
+  background-color: #000;
+  color: #fff;
+}
+
+.search-input:focus,
+.search-input:active {
+  outline: none;
+  background-color: rgb(36, 121, 10);
+}
+
+.search-label {
+  position: absolute;
+  top: 50%;
+  left: 0.5rem;
+  transform: translateY(-50%);
+}
+
+.search-icon {
+  position: relative;
+  width: 1.6rem;
+  height: 1.6rem;
+  border: 0.2rem solid #fff;
+  border-radius: 100%;
+  margin-top: -0.425rem;
+}
+
+.search-icon:after {
+  content: '';
+  width: 0.2rem;
+  height: 1rem;
+  border-radius: 0.3rem;
+  background: #fff;
+  position: absolute;
+  top: 1rem;
+  left: 1.2rem;
+  transform: rotate(-45deg);
+}
+
+/* LOGS */
+
+.logs {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.logs-title {
+  font-size: 3rem;
+  margin: 2rem 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logs-list {
+  list-style-type: none;
+  align-self: flex-start;
+  width: 100%;
+}
+
+.logs-item {
+  padding: 1rem 0;
+  border-top: 0.1rem solid #000;
+}
+
+.logs-link {
+  font-weight: var(--fw-medium);
+  font-size: 1.6rem;
+  text-decoration: none;
+}
+
+.logs-details {
+  margin-top: 0.3rem;
+  font-size: 1.3rem;
+  text-decoration: none;
+  display: flex;
+}
+
+.logs-details span:nth-child(2) {
+  margin-right: auto;
+  margin-left: 1rem;
 }
