--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,6 @@ body {
 }
 
 /* LOGS */
-
 .logs {
   display: flex;
   flex-direction: column;
@@ -140,7 +139,6 @@ body {
 }
 
 /* BUTTONS */
-
 .buttons {
   position: fixed;
   bottom: 3rem;
@@ -154,6 +152,7 @@ body {
   height: 4.4rem;
   border: 0.1rem solid #000;
   transition: all 200ms ease-in;
+  background-color: var(--clr-green);
 }
 
 .buttons a:hover {
@@ -176,39 +175,39 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
+  background-color: #000;
   transform: translate(-50%, -50%);
-  background-color: var(--clr-green);
   border-radius: 1rem;
 }
 
 .add-log:before {
-  height: 2.8rem;
+  height: 2rem;
   width: 0.2rem;
 }
 
 .add-log:after {
   height: 0.2rem;
-  width: 2.8rem;
+  width: 2rem;
 }
 
 /* Add Tech */
 /* List Techs */
 .add-tech {
   position: relative;
-  background: linear-gradient(to left, var(--clr-green) 2rem, transparent)
-      no-repeat 2.6rem 1.9rem/1.4rem 0.2rem,
-    linear-gradient(to bottom, var(--clr-green) 2rem, transparent) no-repeat
-      3.2rem 1.3rem/0.2rem 1.4rem;
+  background: linear-gradient(to left, #000 2rem, transparent) no-repeat 2.6rem
+      1.9rem/1.4rem 0.2rem,
+    linear-gradient(to bottom, #000 2rem, transparent) no-repeat 3.2rem 1.3rem/0.2rem
+      1.4rem;
 }
 
 .list-techs {
   position: relative;
-  background: linear-gradient(to left, var(--clr-green) 2rem, transparent)
-      no-repeat 2.6rem 1.9rem/ 1.4rem 0.2rem,
-    linear-gradient(to left, var(--clr-green) 2rem, transparent) no-repeat
-      2.6rem 1.5rem/ 1.4rem 0.2rem,
-    linear-gradient(to left, var(--clr-green) 2rem, transparent) no-repeat
-      2.6rem 2.3rem/ 1.4rem 0.2rem;
+  background: linear-gradient(to left, #000 2rem, transparent) no-repeat 2.6rem
+      1.9rem/ 1.4rem 0.2rem,
+    linear-gradient(to left, #000 2rem, transparent) no-repeat 2.6rem 1.5rem/ 1.4rem
+      0.2rem,
+    linear-gradient(to left, #000 2rem, transparent) no-repeat 2.6rem 2.3rem/ 1.4rem
+      0.2rem;
 }
 
 .add-tech:before,
@@ -217,7 +216,7 @@ body {
 .list-techs:after {
   content: '';
   position: absolute;
-  border: 0.2rem solid var(--clr-green);
+  border: 0.2rem solid #000;
 }
 
 .add-tech:before,
@@ -239,3 +238,5 @@ body {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
 }
+
+/* MODALS */
