Add Log Modal Style

--- a/src/App.css
+++ b/src/App.css
@@ -240,3 +240,89 @@ body {
 }
 
 /* MODALS */
+.modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.modal-title {
+  font-size: 3rem;
+  padding-bottom: 0.2rem;
+  margin-bottom: 1.5rem;
+  border-bottom: 0.2rem solid #000;
+}
+
+.modal-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal-label {
+  display: block;
+  font-size: 1.6rem;
+  margin: 1.5rem 0 0.2rem;
+  font-weight: var(--fw-medium);
+}
+.modal-input {
+  width: 50%;
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
+  border: 0.2rem solid var(--clr-green);
+  border-radius: 0.4rem;
+}
+
+.modal-input:focus,
+.modal-input:active {
+  outline: none;
+  background-color: #f4f4f4;
+}
+
+.modal-checkbox span {
+  margin-top: -1rem;
+  width: 2.2rem;
+  height: 2.2rem;
+  display: block;
+  border: 0.2rem solid #000;
+  border-radius: 0.4rem;
+  position: relative;
+  transition: all 100ms ease-in;
+}
+
+.modal-checkbox span:before,
+.modal-checkbox span:after {
+  content: '';
+  position: absolute;
+  height: 0.3rem;
+  background-color: #000;
+  transition: all 100ms ease-in;
+  opacity: 0;
+}
+
+.modal-checkbox span:before {
+  top: 50%;
+  left: 10%;
+  width: 0.8rem;
+  transform: rotate(45deg);
+}
+
+.modal-checkbox span:after {
+  top: 40%;
+  left: 30%;
+  width: 1.2rem;
+  transform: rotate(-45deg);
+}
+
+.modal-checkbox input {
+  appearance: none;
+}
+
+.modal-checkbox input:checked + span {
+  background-color: var(--clr-green);
+}
+
+.modal-checkbox input:checked + span:before,
+.modal-checkbox input:checked + span:after {
+  opacity: 1;
+}
